# AdvancedImageAnalysisUNICAS

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  aia.sln  cmake_install.cmake
libs/Debug/: aiaUtils.lib  ucasUtils.lib
libs/RelWithDebInfo/: aiaUtils.lib  ucasUtils.lib
libs/Release/: aiaUtils.lib  ucasUtils.lib
project1/: cmake_install.cmake  project1.vcxproj  project1.vcxproj.filters
project2/: bezier_curve.cpp  bezier_curve.h  cmake_install.cmake  image_management.cpp  image_management.h  project2.vcxproj  project2.vcxproj.filters  wall_marker.cpp  wall_marker.h
project2/DATA/: 0000.tif  0001.tif  0002.tif  0003.tif  0004.tif  0005.tif  0006.tif  0007.tif  0008.tif  0009.tif  0010.tif  0011.tif  0012.tif  0013.tif  0014.tif  0015.tif  0016.tif  0017.tif  0018.tif  0019.tif  0020.tif  0021.tif  0022.tif  0023.tif  0024.tif  0025.tif  0026.tif  0027.tif  0028.tif  0029.tif  0030.tif  0031.tif  0032.tif  0033.tif  0034.tif  0035.tif  0036.tif  0037.tif  0038.tif  0039.tif  (+757 more)
project2/tinyxml/: CMakeLists.txt  tinyxml.cpp
project2/wall_markers/: markers-wall-2.xml  markers-wall-3.xml  markers-wall.xml
project3/: cmake_install.cmake  project3.vcxproj  project3.vcxproj.filters
project4/: cmake_install.cmake  project4.vcxproj  project4.vcxproj.filters
project5/: cmake_install.cmake  project5.vcxproj  project5.vcxproj.filters
project6/: cmake_install.cmake  project6.vcxproj  project6.vcxproj.filters
utils/: cmake_install.cmake
utils/aia/: aiaUtils.vcxproj  aiaUtils.vcxproj.filters  (+1 more)
(+142 files in other folders)
